wp-content/themes/choctaw-landing/src/styles/components/header/_mega-menu.scss
@use "../../abstracts/mixins" as m;
@use "../../abstracts/buttons";

%dropdown_is_visible {
	border-radius: 0;
	border: none;
	border-top: 4px solid var(--color-primary);
	top: auto;
	padding: 1rem;

	.sub-menu,
	.nav-item,
	.dropdown-item {
		position: relative !important;
		border: none;
		border-radius: 0;
		font-weight: 300;
		font-family: var(--font-body);
		--py: 0;
		padding-top: var(--py);
		padding-bottom: var(--py);
	}

	.mega-menu__acf-field {
		display: flex;
		flex-direction: column;
	}
}

.mega-menu {
	.btn-group {
		position: static;
		.dropdown-toggle-split {
			display: none;
		}

		& > .nav-link {
			color: white;

			&.active {
				font-weight: bold;
			}

			&:focus-visible {
				font-weight: bold;
				text-decoration: underline;
			}

			&:focus:not(:focus-visible) {
				font-weight: normal;
				text-decoration: none;
			}
		}

		&:focus-within {
			.dropdown-toggle-split {
				display: block;
				color: white;

				&:focus {
					color: var(--color-secondary);
				}
			}
		}
		@include m.media-breakpoint-down(xl) {
			display: grid;
			grid-template-columns: max(150px) auto;
			margin-bottom: 10px;
			width: 100%;

			.dropdown-toggle-split {
				width: 30px;
				color: white;
				&:active,
				&.show {
					border: none;
				}
			}
		}
	}

	&:nth-last-child(-n + 3) {
		.mega-menu__container {
			@include m.media-breakpoint-up(xl) {
				right: 200px;
			}
			@media only screen and (min-width: 2000px) {
				& {
					right: unset;
				}
			}
		}
	}

	&__container {
		@extend %dropdown_is_visible;
		grid-row: 2 / 3;
		grid-column: 1 / 3;

		@include m.media-breakpoint-up(xl) {
			margin-top: 82px;
			max-width: 900px;
			gap: 15px;

			.dropdown-menu-end {
				// grabs all children *except* the last two
				&:not(:nth-last-child(-n + 2)) {
					.sub-menu {
						li {
							@include m.media-breakpoint-up(xl) {
								border-right: 1px solid black;
							}
						}
					}
				}
			}

			.mega-menu:hover &,
			.mega-menu > .btn-group > a.nav-link:focus ~ &,
			&:focus-within,
			&:focus-visible {
				display: grid;
				grid-template-columns:
					repeat(calc(var(--grid-columns)), 1fr)
					auto;
			}

			.mega-menu__title {
				padding: 0 0 1rem !important;
			}

			.sub-menu.depth_1 {
				.dropdown-item {
					padding: 0;
					margin: 0;
				}
			}
		}

		.dropdown-menu {
			display: flex;
			flex-direction: column;
			align-items: stretch;
		}

		&.show {
			display: flex;
			flex-direction: column;
			overflow-y: auto;

			.dropdown-menu {
				font-size: 1.25rem;
			}
		}
	}

	&__acf-field {
		display: none;
	}

	&__title {
		font-weight: 700;
		text-transform: uppercase;
		font-family: var(--font-headings);
		padding: 0;
		margin: 0;
		width: fit-content;
		color: var(--bs-body-color);
		cursor: default;
	}

	&__image {
		aspect-ratio: 1;
		object-fit: cover;
		max-height: 150px;
		width: 150px;
	}

	&__btn {
		@extend %btn;
		width: 150px;
		background: var(--color-primary);
		color: white;
		border: 2px solid var(--color-primary);
		font-weight: 500;
		font-size: 1rem;

		&:hover,
		&:focus {
			border: 2px solid var(--color-primary);
			background: white;
			color: var(--color-primary);
		}
	}

	&__event-image {
		position: relative;
		z-index: 1;
		max-height: 250px;
		width: 100%;
		object-fit: cover;
		aspect-ratio: 16 / 9;
	}

	&__event-details {
		position: absolute;
		bottom: 0;
		z-index: 2;
		background-color: var(--color-primary);
		font-family: var(--font-body);
		color: white;
		width: 100%;
		display: grid;
		grid-template-columns: 10px 1fr;
		align-items: center;
		gap: 10px;
		padding: 10px;

		&--title {
			font-family: inherit;
			letter-spacing: 1px;
			font-weight: 700;
			font-size: 18px;
			grid-column: 1 / -1;
			grid-row: 1 / 2;
			margin-bottom: 0;
		}

		&--icon {
			grid-column: 1 / 2;
		}
		&--time {
			font-size: 16px;
			grid-column: 2 / 3;
			grid-row: 2 / 3;
		}
	}
}

.sub-menu {
	.dropdown-item {
		width: fit-content;
		min-width: 0;
	}
}

